--- a/oscar/static/oscar/css/dashboard.css
+++ b/oscar/static/oscar/css/dashboard.css
@@ -178,43 +178,46 @@ button {
 h3 {
   margin-bottom: 4.5px;
 }
-.control-group.pull-left > label {
+.search-adv .control-group.pull-left > label {
   width: 100px;
 }
-.control-group.pull-left .controls {
+.search-adv .control-group.pull-left .controls {
   margin-left: 120px;
 }
-.control-group.pull-left .controls > label {
+.search-adv .control-group.pull-left .controls > label {
   padding-left: 0px;
 }
-.control-group.pull-left .controls .radio ul {
+.search-adv .control-group.pull-left .controls .radio ul {
   padding: 0px;
   margin: 0px;
   *zoom: 1;
 }
-.control-group.pull-left .controls .radio ul:before, .control-group.pull-left .controls .radio ul:after {
+.search-adv .control-group.pull-left .controls .radio ul:before, .search-adv .control-group.pull-left .controls .radio ul:after {
   display: table;
   content: "";
 }
-.control-group.pull-left .controls .radio ul:after {
+.search-adv .control-group.pull-left .controls .radio ul:after {
   clear: both;
 }
-.control-group.pull-left .controls .radio ul > li {
+.search-adv .control-group.pull-left .controls .radio ul > li {
   list-style: none;
 }
-.control-group.pull-left .controls .radio ul li {
+.search-adv .control-group.pull-left .controls .radio ul li {
   float: left;
 }
-.control-group.pull-left .controls .radio ul li li {
+.search-adv .control-group.pull-left .controls .radio ul li li {
   float: none;
 }
-.control-group.pull-left .controls .radio ul li label {
+.search-adv .control-group.pull-left .controls .radio ul li label {
   display: inline-block;
   padding-top: 5px;
   margin-bottom: 0;
   vertical-align: middle;
   margin-left: 10px;
   padding-left: 18px;
+}
+.product-new .form-inline.pull-left {
+  margin-right: 15px;
 }
 .no-float {
   float: none;
@@ -294,9 +297,9 @@ h3 {
   margin-left: 0px;
   list-style: none;
 }
-.form-inline {
-  margin-bottom: 0px;
-}
+/*.form-inline {
+  margin-bottom:0px;
+}*/
 .icon:before {
   padding: 7px 6px;
   background: #000000;
@@ -371,6 +374,6 @@ h3 {
   border-top-width: 0px;
   background: #f5f5f5;
 }
-.new-product input[type=text], .new-product textarea {
+.fields-full input[type=text], .fields-full textarea {
   width: 99%;
 }
