--- a/oscar/static/oscar/less/bootstrap/wells.less
+++ b/oscar/static/oscar/less/bootstrap/wells.less
@@ -9,6 +9,7 @@
   border: 1px solid rgba(0,0,0,.05);
   .border-radius(4px);
   .box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
+  .clearfix();
   blockquote {
     border-color: #ddd;
     border-color: rgba(0,0,0,.15);
