--- a/oscar/templates/dashboard/catalogue/product_update.html
+++ b/oscar/templates/dashboard/catalogue/product_update.html
@@ -24,28 +24,63 @@ Update product | {{ block.super }}
 {% endblock header %}
 
 {% block dashboard_content %}
-<form action="." method="post" class="new-product" enctype="multipart/form-data">
+<form action="." method="post" class="product-new" enctype="multipart/form-data">
 	{% csrf_token %}
     <div class="well well-info">
         <div class="sub-header">
             <h3 class="app-ico ico_expand icon">Product information</h3>
         </div>
-		{% include "partials/form_fields.html" with form=form %}
+        {% for field in form %}
+            {% if forloop.counter > 4 %}
+                <div class="form-inline pull-left">
+                	{% if field.is_hidden %}
+                		{{ field }}
+                	{% else %}
+                		{{ field }}
+                		{{ field.label_tag }}
+                			{% for error in field.errors %}
+                				<ul class="help-block">
+                					<li>{{ error|escape }}</li>
+                				</ul>
+                			{% endfor %}
+                	{% endif %}
+            	</div>
+            {% else %}
+                <div class="control-group {% for error in field.errors %}error{% endfor %} fields-full">
+                    {% if field.is_hidden %}
+                        {{ field }}
+                    {% else %}
+                    {{ field.label_tag }}
+                    <div class="controls">
+                        {{ field }}
+                            {% for error in field.errors %}
+                            <span class="help-block">
+                                {{ error|escape }}
+                            </span>
+                            {% endfor %}
+                        {% if field.help_text %}
+                            <span class='help-block'>
+                                {{ field.help_text }}
+                            </span>
+                        {% endif %}
+                    </div>
+                    {% endif %}
+                </div>
+            {% endif %}
+        {% endfor %}
     </div>
 		
-	<div class="well">	
+	<div class="well form-inline">	
 		<div class="sub-header">
 		  <h3 class="app-ico ico_home icon">Category information</h3>
 		</div>
-		<div class="form-inline">
-    		{{ category_formset.management_form }}
-    		{% for category_form in category_formset %}
-    			{% include "partials/form_fields_inline.html" with form=category_form %}
-    		{% endfor %}
-		</div>
+    	{{ category_formset.management_form }}
+    	{% for category_form in category_formset %}
+    		{% include "partials/form_fields_inline.html" with form=category_form %}
+    	{% endfor %}
 	</div>
 	
-	<div class="well">
+	<div class="well form-inline">
     	<div class="sub-header">
     	   <h3 class="app-ico ico_favourite icon">Images</h3>
     	</div>
@@ -56,106 +91,35 @@ Update product | {{ block.super }}
     	{% endfor %}
 	</div>
 	
-	<div class="well">
+	<div class="well fields-full">
 		<div class="sub-header">
 		    <h3 class="app-ico ico_shop_bag icon">Stock and price information</h3>
 		</div>
-        <!-- {% include "partials/form_fields.html" with form=stockrecord_form %} -->
 		{% block stockrecord_form %}
-        <div class="row-fluid">
-            <div class="span5">
-                <div class="control-group {% for error in stockrecord_form.partner.errors %}error{% endfor %}">
-                    <label for="id_partner">Partner:</label>
+		    <div class="row ">
+                {% for field in stockrecord_form %}
+                <div class="control-group {% for error in field.errors %}error{% endfor %} span4 pull-left {% if forloop.counter|divisibleby:2 %}{% else %}pull-clear{% endif %}">
+                    {% if field.is_hidden %}
+                        {{ field }}
+                    {% else %}
+                    {{ field.label_tag }}
                     <div class="controls">
-                        {{ stockrecord_form.partner }}
-                        {% for error in stockrecord_form.partner.errors %}
-                        <span class="help-block">
-                            {{ error|escape }}
-                        </span>
-                        {% endfor %}
+                        {{ field }}
+                            {% for error in field.errors %}
+                            <span class="help-block">
+                                {{ error|escape }}
+                            </span>
+                            {% endfor %}
+                        {% if field.help_text %}
+                            <span class='help-block'>
+                                {{ field.help_text }}
+                            </span>
+                        {% endif %}
                     </div>
+                    {% endif %}
                 </div>
-                <div class="control-group {% for error in stockrecord_form.partner_sku.errors %}error{% endfor %}">
-                    <label for="id_partner_sku">Partner SKU:</label>
-                    <div class="controls">
-                        {{ stockrecord_form.partner_sku }}
-                        {% for error in stockrecord_form.partner_sku.errors %}
-                        <span class="help-block">
-                            {{ error|escape }}
-                        </span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="control-group {% for error in stockrecord_form.price_currency.errors %}error{% endfor %}">
-                    <label for="id_price_currency">Price currency:</label>
-                    <div class="controls">
-                        {{ stockrecord_form.price_currency }}
-                        {% for error in stockrecord_form.price_currency.errors %}
-                        <span class="help-block">
-                            {{ error|escape }}
-                        </span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="control-group {% for error in stockrecord_form.price_excl_tax.errors %}error{% endfor %}">
-                    <label for="id_price_excl_tax">Price excl tax:</label>
-                    <div class="controls">
-                        {{ stockrecord_form.price_excl_tax }}
-                        {% for error in stockrecord_form.price_excl_tax.errors %}
-                        <span class="help-block">
-                            {{ error|escape }}
-                        </span>
-                        {% endfor %}
-                    </div>
-                </div>
+                {% endfor %}
             </div>
-            <div class="span5 offset3">
-                <div class="control-group {% for error in stockrecord_form.price_retail.errors %}error{% endfor %}">
-                    <label for="id_price_retail">Price retail:</label>
-                    <div class="controls">
-                        {{ stockrecord_form.price_retail }}
-                        {% for error in stockrecord_form.price_retail.errors %}
-                        <span class="help-block">
-                            {{ error|escape }}
-                        </span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="control-group {% for error in stockrecord_form.cost_price.errors %}error{% endfor %}">
-                    <label for="id_cost_price">Cost price:</label>
-                    <div class="controls">
-                        {{ stockrecord_form.cost_price }}
-                        {% for error in stockrecord_form.cost_price.errors %}
-                        <span class="help-block">
-                            {{ error|escape }}
-                        </span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="control-group {% for error in stockrecord_form.num_in_stock.errors %}error{% endfor %}">
-                    <label for="id_num_in_stock">Num in stock:</label>
-                    <div class="controls">
-                        {{ stockrecord_form.num_in_stock }}
-                        {% for error in stockrecord_form.num_in_stock.errors %}
-                        <span class="help-block">
-                            {{ error|escape }}
-                        </span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="control-group {% for error in stockrecord_form.low_stock_threshold.errors %}error{% endfor %}">
-                    <label for="id_low_stock_threshold">Low stock threshold:</label>
-                    <div class="controls">
-                        {{ stockrecord_form.low_stock_threshold }}
-                        {% for error in stockrecord_form.low_stock_threshold.errors %}
-                        <span class="help-block">
-                            {{ error|escape }}
-                        </span>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </div>
 		{% endblock %}
 	</div>
 	<div class="form-actions">
