--- a/oscar/templates/dashboard/promotions/form.html
+++ b/oscar/templates/dashboard/promotions/form.html
@@ -20,7 +20,7 @@
 
 {% block promotion_form %}
 <div class="well well-info">
-    <form action="." method="post" enctype="multipart/form-data" class="new-product">
+    <form action="." method="post" enctype="multipart/form-data" class="fields-full">
     	{% csrf_token %}
     	{% include "partials/form_fields.html" with form=form %}
 
