--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -66,7 +66,7 @@ Basket | {{ block.super }}
 
 
     <div class="form-actions">
-        <input type="submit" value="Apply Changes" class="btn"/>
+        Made changes? <input type="submit" value="Update basket" class="btn"/>
         <a href="{% url checkout:index %}" class="pull-right btn btn-primary">Checkout</a>
     </div>
 
