--- a/oscar/static/oscar/less/dashboard.less
+++ b/oscar/static/oscar/less/dashboard.less
@@ -346,19 +346,36 @@ h3 {
     margin-bottom:0px;
   }
   .nav-tabs > li > a {
-    background: #fff;
+    background: #f5f5f5;
+    #gradient > .vertical(#ccc, #fff);
     border: 1px solid #DDD;
-    
+    margin: 6px 10px 0 0;
+    color: @gray;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 #fff;
   }
   .nav-tabs > li.active a {
     background: #f5f5f5;
     border-bottom-color: transparent;
+    #gradient > .vertical(@grayLighter, #fff);
+    border-bottom: 1px solid #fff;
+    outline: none;
+    font-weight: bold;
+    color: #0088CC;
+    margin-top: 0;
+    height: 20px;
   }
   .tab-content {
     padding:@baseLineHeight;
     border:1px solid darken(@grayLighter, 5%);
     border-top-width:0px;
-    background:#f5f5f5;
+    background:#fff;
+    -webkit-border-bottom-right-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -moz-border-radius-bottomright: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
   }
 }
 .fields-full {
