Changes to the account settings page table

--- a/oscar/static/oscar/less/dashboard.less
+++ b/oscar/static/oscar/less/dashboard.less
@@ -354,7 +354,8 @@ h3 {
     font-weight: bold;
     text-shadow: 1px 1px 0 #fff;
   }
-  .nav-tabs > li.active a {
+  .nav-tabs > li.active a,
+  .nav-tabs > li > a:hover {
     background: #f5f5f5;
     border-bottom-color: transparent;
     #gradient > .vertical(@grayLighter, #fff);
