--- a/oscar/static/oscar/css/dashboard.css
+++ b/oscar/static/oscar/css/dashboard.css
@@ -377,7 +377,7 @@ h3 {
   font-weight: bold;
   text-shadow: 1px 1px 0 #fff;
 }
-.tabbable.dashboard .nav-tabs > li.active a {
+.tabbable.dashboard .nav-tabs > li.active a, .tabbable.dashboard .nav-tabs > li > a:hover {
   background: #f5f5f5;
   border-bottom-color: transparent;
   background-color: #f5f5f5;
