--- a/oscar/templates/customer/profile.html
+++ b/oscar/templates/customer/profile.html
@@ -7,77 +7,92 @@ Profile | {{ block.super }}
 
 {% block header %}
 <div class="page-header">
-    <h2>Account</h2>
+    <h1>Account</h1>
 </div>
 {% endblock header %}
 
 {% block content %}
 <div class="sub-header">
-    <h3>Account settings</h3>
+    <h2>Account settings</h2>
 </div>
 
-<div class="sub-header">
-    <h3>Profile</h3>
-</div>
-<table class="table table-striped table-bordered">
-	<tbody>
-		<tr>
-			<th>Username</th>
-			<td>{{ request.user.username }}</td>
-		</tr>
-		<tr>
-			<th>Name</th>
-			<td>{{ request.user.get_full_name|default:'-' }}</td>
-		</tr>
-		<tr>
-			<th>Email address</th>
-			<td>{{ user.email }}</td>
-		</tr>
-		<tr>
-			<th>Date registered</th>
-			<td>{{ user.date_joined }}</td>
-		</tr>
-		<tr>
-			<th></th>
-			<td>
-				<a href="" class="btn">Edit profile</a>
-				<a href="" class="btn">Change password</a>
-			</td>
-		</tr>
-	</tbody>
-</table>
+<div class="tabbable dashboard">
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#1" data-toggle="tab">Profile</a></li>
+		<li><a href="#2" data-toggle="tab">Order History</a></li>
+		<li><a href="#3" data-toggle="tab">Address Book</a></li>
+		<li><a href="#4" data-toggle="tab">Email History</a></li>
+	</ul>
+	
+	<div class="tab-content">
+		
+		<div class="tab-pane active" id="1">
+			<div class="sub-header">
+    			<h3>Profile</h3>
+			</div>
+			<table class="table table-striped table-bordered">
+				<tbody>
+					<tr>
+						<th>Username</th>
+						<td>{{ request.user.username }}</td>
+					</tr>
+					<tr>
+						<th>Name</th>
+						<td>{{ request.user.get_full_name|default:'-' }}</td>
+					</tr>
+					<tr>
+						<th>Email address</th>
+						<td>{{ user.email }}</td>
+					</tr>
+					<tr>
+						<th>Date registered</th>
+						<td>{{ user.date_joined }}</td>
+					</tr>
+					<tr>
+						<th></th>
+						<td>
+							<a href="" class="btn">Edit profile</a>
+							<a href="" class="btn">Change password</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		
+		<div class="tab-pane" id="2">
+			<div class="sub-header">
+    			<h3>Order history</h3>
+			</div>
 
-<div class="sub-header">
-    <h3>Order history</h3>
-</div>
+			{% if orders %}
+			<table class="table table-striped table-bordered">
+				<tr>
+					<th>Order number</th>
+					<th>Total inc tax</th>
+					<th>Date submitted</th>
+					<th></th>
+				</tr>
+				{% for order in orders %}
+				<tr>
+					<td>{{ order.number }}</td>
+					<td>{{ order.total_incl_tax|currency }}</td>
+					<td>{{ order.date_placed }}</td>
+					<td>
+						<a class="btn btn-info" href="{% url customer:order order.number %}">View</a>
+					</td>
+				</tr>
+				{% endfor %}
+			</table>
 
-{% if orders %}
-	<table class="table table-striped table-bordered">
-		<tr>
-			<th>Order number</th>
-			<th>Total inc tax</th>
-			<th>Date submitted</th>
-			<th></th>
-		</tr>
-		{% for order in orders %}
-		<tr>
-			<td>{{ order.number }}</td>
-			<td>{{ order.total_incl_tax|currency }}</td>
-			<td>{{ order.date_placed }}</td>
-			<td>
-				<a class="btn btn-info" href="{% url customer:order order.number %}">View</a>
-			</td>
-		</tr>
-		{% endfor %}
-	</table>
-
-	<div class="form-actions">
-		<a href="{% url customer:order-list %}" class="btn">View order history</a>
-	</div>
-{% else %}
-	<p>You haven't placed any orders yet.</p>
-{% endif %}
-
+			<div class="form-actions">
+				<a href="{% url customer:order-list %}" class="btn">View order history</a>
+			</div>
+			{% else %}
+			<p>You haven't placed any orders yet.</p>
+			{% endif %}
+		</div>
+		
+<div class="tab-pane" id="3">
 <div class="sub-header">
     <h3>Address book</h3>
 </div>
@@ -103,7 +118,8 @@ Profile | {{ block.super }}
 		</tr>
 	</tbody>
 </table>
-
+</div>
+<div class="tab-pane" id="4">
 <div class="sub-header">
     <h3>Email history</h3>
 </div>
@@ -133,5 +149,7 @@ Profile | {{ block.super }}
     <a href="{% url oscar-customer-email-history %}" class="btn">View email history</a>
 <div>
 {% endif %}
+</div>
+</div><!--End of tab-content -->
 
 {% endblock content %}
