--- a/oscar/templates/catalogue/browse.html
+++ b/oscar/templates/catalogue/browse.html
@@ -46,7 +46,7 @@
             <h1>{{ summary }}</h1>
         </div>
 		{% if category.description %}
-		<p>{{ category.description }}</p>
+			<p>{{ category.description }}</p>
 		{% endif %}
 
 {% endblock sidebar %}
@@ -60,9 +60,7 @@
 				{% endif %}
 				<ol class="products four">
 					{% for product in products %}
-					<li>
-						{% include "catalogue/partials/product.html" %}
-					</li>
+					<li>{% include "catalogue/partials/product.html" %}</li>
 					{% endfor %}
 				</ol>
 				{% if page_obj %}
