--- a/oscar/templates/promotions/singleproduct.html
+++ b/oscar/templates/promotions/singleproduct.html
@@ -1,5 +1,6 @@
 {% load currency_filters %}
 {% load basket_tags %}
+{% load product_tags %}
 
 <article class="well promotion_single">
     <div class="sub-header">
@@ -7,11 +8,10 @@
     </div>
     <div class="row-fluid">
     	<div class="span3">
-    		{% with product.images.all.0 as image %}
+    		{% product_image product as product_image %}
     		<div class="image_container"> 
-    			<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ image.original.url }}" alt="{{ product.get_title }}"></a>
+    			<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
     		</div>    
-    		{% endwith %}
     	</div>
     	<div class="span9">
     	    <h3>{{ product.title }}</h3>
