Added new checkout gateway page similar to Amazon's.

--- a/oscar/templates/checkout/layout.html
+++ b/oscar/templates/checkout/layout.html
@@ -90,4 +90,5 @@
 
 {# Block for additional scripts #}
 {% block extrascripts %}
+    <script src="{{ STATIC_URL }}oscar/js/oscar/checkout.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
