--- a/oscar/templates/checkout/gateway.html
+++ b/oscar/templates/checkout/gateway.html
@@ -1,43 +1,42 @@
 {% extends "checkout/layout.html" %}
-
 {% load currency_filters %}
+
+{% block title %}
+Checkout gateway | {{ block.super }}
+{% endblock %}
 
 {% block header %}
 <div class="page-header">
-    <h1>Checkout / Gateway</h1>
+    <h1>Checkout gateway</h1>
 </div>
 {% endblock header %}
 
-
 {% block content %}
 
-<div class="row-fluid">
-    <div class="span6 login_form">
-        <form action="{{ request.get_full_path }}" method="post" class="form-stacked" />
-            <h2>Log In</h2>
-            {% csrf_token %}
-            {% include "partials/form_fields.html" with form=login_form %}
-            <input name="login_submit" type="submit" value="Log In" class="btn" />
-        </form>
-    </div>
-    <div class="span6 register_form">
-        <form action="{{ request.get_full_path }}" method="post" class="form-stacked" />
-            <h2>Register Here</h2>
-            {% csrf_token %}
-            {% include "partials/form_fields.html" with form=registration_form %}
-            <input name="registration_submit" type="submit" value="Register" class="btn" />
-        </form>
-    </div>
-</div>
-
-{% if anon_checkout_allowed %}
-<div class="sub-header">
-    <h2>Checkout Anonymously</h2>
-</div>
-<p>You can checkout without signing in.  You will be given the opportunity to register when checkout is complete.</p>
-<div class="form-actions">
-    <a href="{% url checkout:shipping-address %}" class="btn">Checkout anonymously</a>
-</div>
-{% endif %}
+<form action="." method="post">
+	{% csrf_token %}
+	{{ form.non_field_errors }}
+	<div>
+		<h4>What is your email address?</h4>
+		<label for="id_username">My email address is:</label>
+		{{ form.username }}
+		{{ form.username.errors }}
+	</div>
+	<div>
+		<h4>Do you have an account already?</h4>
+		{{ form.options.errors }}
+		<label><input type="radio" id="id_options_0" name="options" value="new" {% if not form.password.errors %}checked="checked"{% endif %} /> No, I want to use guest checkout</label><br/>
+		<label><input type="radio" id="id_options_1" name="options" value="existing" {% if form.password.errors %}checked="checked"{% endif %}e> Yes, I have a password</label>
+		{{ form.password }}
+		{{ form.password.errors }}
+	</div>
+	<div>
+		<button type="submit" class="btn">Go!</button>
+	</div>
+</form>
 
 {% endblock content %}
+
+{% block onbodyload %}
+oscar.checkout.gateway.init();
+{% endblock %}
