Checkout nav added

--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -72,3 +72,21 @@
   background-color:#FDF5D9;
   font-weight:bold;
 }
+
+.checkoutNav ul li {
+    padding: 4px 0;
+    background-color: @grayLighter;
+    .border-radius(4px);
+    .box-shadow(2px 2px 3px rgba(0,0,0,.5));
+    color: #fff;
+    .app-ico {
+        text-align: center;
+    }
+}
+
+.checkoutNav ul li.active {
+    background-color: #0088CC;
+    .app-ico {
+        color: #fff;
+    }
+}
