--- a/oscar/static/oscar/css/styles.css
+++ b/oscar/static/oscar/css/styles.css
@@ -3129,6 +3129,26 @@ body {
   background-color: #FDF5D9;
   font-weight: bold;
 }
+.checkoutNav ul li {
+  padding: 4px 0;
+  background-color: #eeeeee;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  color: #fff;
+}
+.checkoutNav ul li .app-ico {
+  text-align: center;
+}
+.checkoutNav ul li.active {
+  background-color: #0088CC;
+}
+.checkoutNav ul li.active .app-ico {
+  color: #fff;
+}
 /*  Procduct columns*/
 .five li {
   width: 20%;
