--- a/oscar/templates/customer/order.html
+++ b/oscar/templates/customer/order.html
@@ -7,7 +7,7 @@ Order {{ order.number }} | {{ block.super }}
 
 {% block header %}
 <div class="page-header">
-    <h2>Order #{{ order.number }}</h2>
+    <h1>Order #{{ order.number }}</h1>
 </div>
 {% endblock header %}
 
@@ -15,91 +15,134 @@ Order {{ order.number }} | {{ block.super }}
 {% block content %}
 
 <div class="sub-header">
-    <h3>Shipping address</h3>
-</div>
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Address</th>
-        <td>
-            {% for field in order.shipping_address.active_address_fields %}
-            {{ field }}<br/>
-            {% endfor %}
-        </td>
-    </tr>
-    {% if order.shipping_address.phone_number %}
-    <tr>
-        <th>Contact number</th>
-        <td>{{ shipping_address.phone_number }}</td>
-    </tr>
-    {% endif %}
-    {% if order.shipping_address.notes %}
-    <tr>
-        <th>Shipping notes</th>
-        <td>{{ shipping_address.notes }}</td>
-    </tr>
-    {% endif %} 
-</table>
-<div class="sub-header">
-    <h3>Shipping method</h3>
-</div>
-<p>{{ order.shipping_method }}</p>
-
-<div class="sub-header">
-    <h3>Order contents</h3>
+    <h2>Shipping address</h2>
 </div>
 
-{% csrf_token %}
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Product</th>
-        <th>Availability</th>
-        <th>Quantity</th>
-        <th>Line price excl tax</th>
-        <th>Line price incl tax</th>
-        <th>Status</th>
-        <th></th>
-    </tr>
-    {% for line in order.lines.all %}
-    <tr>
-        <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
-        <td>{{ line.product.stockrecord.availability }}</td>
-        <td>{{ line.quantity }}</td>
-        <td>{{ line.line_price_before_discounts_excl_tax|currency }}</td>
-        <td>{{ line.line_price_before_discounts_incl_tax|currency }}</td>
-        <td>{{ line.shipping_status }}</td>
-        <td>
-            <form action="{% url customer:order-line order.number line.id %}" method="POST">
-                {% csrf_token %}
-                <input type="hidden" name="action" value="reorder" />
-                <input type="submit" value="Re-order" />
-            </form>
-            <a href="{% url catalogue:reviews-add line.product.slug line.product.id %}">Write a review</a>
-        </td>
-    </tr>
-    {% endfor %}
-    {% for discount in order.discounts.all %}
-    <tr>
-        <td colspan="4">{{ discount.description }}</td>
-        <td>-{{ discount.amount|currency }}</td>
-    </tr>
-    {% endfor %}
-</table>
+<div class="tabbable dashboard">
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#1" data-toggle="tab">Shipping Address</a></li>
+		<li><a href="#2" data-toggle="tab">Shipping Method</a></li>
+		<li><a href="#3" data-toggle="tab">Order Contents</a></li>
+	</ul>
 
-<table class="table table-striped table-bordered">
-    <caption>Totals</caption>
-    <tr>
-        <th>Basket total (inc. tax)</th>
-        <td>{{ order.basket_total_incl_tax|currency }}</td>
-    </tr>
-    <tr>
-        <th>Shipping charge (inc. tax)</th>
-        <td>{{ order.shipping_incl_tax|currency }}</td>
-    </tr>
-    <tr>
-        <th>Order total</th>
-        <td>{{ order.total_incl_tax|currency }}</td>
-    </tr>
-</table>
+	<div class="tab-content">
 
+		<div class="tab-pane active" id="1">
+			<div class="sub-header">
+				<h3>Profile</h3>
+			</div>	
+			<div class="row-fluid">
+				<div class="span4">
+ 					<div class="well well-info">
+						<h4>Address:</h4>
+						<p>{% for field in order.shipping_address.active_address_fields %}
+						{{ field }}<br/>
+						{% endfor %}</p>
+					</div>
+				</div>
+				<div class="span4">
+					<div class="well well-info">
+						<h4>Contact Number:</h4>
+						<p>{{ shipping_address.phone_number }}</p>
+					</div>
+				</div>
+				<div class="span4">
+					<div class="well well-info">
+						<h4>Shipping Notes:</h4>
+						<p>{{ shipping_address.notes }}</p>
+					</div>
+				</div>
+			</div>
+			<!-- <table class="table table-striped table-bordered">
+							<tr>
+								<th>Address</th>
+								<td>
+									{% for field in order.shipping_address.active_address_fields %}
+									{{ field }}<br/>
+									{% endfor %}
+								</td>
+							</tr>
+							{% if order.shipping_address.phone_number %}
+							<tr>
+								<th>Contact number</th>
+								<td>{{ shipping_address.phone_number }}</td>
+							</tr>
+							{% endif %}
+							{% if order.shipping_address.notes %}
+							<tr>
+								<th>Shipping notes</th>
+								<td>{{ shipping_address.notes }}</td>
+							</tr>
+							{% endif %} 
+						</table> -->
+		</div>
+		<div class="tab-pane active" id="2">
+			<div class="sub-header">
+				<h3>Shipping method</h3>
+			</div>
+			<p>{{ order.shipping_method }}</p>
+		</div>
+
+
+		<div class="tab-pane active" id="3">
+			<div class="sub-header">
+				<h3>Order contents</h3>
+			</div>
+
+			{% csrf_token %}
+			<table class="table table-striped table-bordered">
+				<tr>
+					<th>Product</th>
+					<th>Availability</th>
+					<th>Quantity</th>
+					<th>Line price excl tax</th>
+					<th>Line price incl tax</th>
+					<th>Status</th>
+					<th></th>
+				</tr>
+				{% for line in order.lines.all %}
+				<tr>
+					<td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
+					<td>{{ line.product.stockrecord.availability }}</td>
+					<td>{{ line.quantity }}</td>
+					<td>{{ line.line_price_before_discounts_excl_tax|currency }}</td>
+					<td>{{ line.line_price_before_discounts_incl_tax|currency }}</td>
+					<td>{{ line.shipping_status }}</td>
+					<td>
+						<form action="{% url customer:order-line order.number line.id %}" method="POST">
+							{% csrf_token %}
+							<input type="hidden" name="action" value="reorder" />
+							<input type="submit" value="Re-order" />
+						</form>
+						<a href="{% url catalogue:reviews-add line.product.slug line.product.id %}">Write a review</a>
+					</td>
+				</tr>
+				{% endfor %}
+				{% for discount in order.discounts.all %}
+				<tr>
+					<td colspan="4">{{ discount.description }}</td>
+					<td>-{{ discount.amount|currency }}</td>
+				</tr>
+				{% endfor %}
+			</table>
+
+			<table class="table table-striped table-bordered">
+				<caption>Totals</caption>
+				<tr>
+					<th>Basket total (inc. tax)</th>
+					<td>{{ order.basket_total_incl_tax|currency }}</td>
+				</tr>
+				<tr>
+					<th>Shipping charge (inc. tax)</th>
+					<td>{{ order.shipping_incl_tax|currency }}</td>
+				</tr>
+				<tr>
+					<th>Order total</th>
+					<td>{{ order.total_incl_tax|currency }}</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
 {% endblock content %}
 
