--- a/oscar/templates/checkout/layout.html
+++ b/oscar/templates/checkout/layout.html
@@ -53,8 +53,10 @@
     <div class="container-fluid page">
        {% block header %}
        {% endblock %}
-       
+
        <div class="page_inner">
+			{% block checkout-nav %}
+			{% endblock %}
         	<!-- The main nav on checkout pages contain links to modal flatpages -->   
             {% block modal %}
                 {% load flatpages %}
