--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -5,35 +5,35 @@
 Checkout | {{ block.super }}
 {% endblock %}
 
-
-
 {% block header %}
 <div class="page-header">
     <h2>Checkout</h2>
 </div>
 {% endblock header %}
 
-{% block content %}
-
-
+{% block checkout-nav %}
 <nav class="checkoutNav">
 	<ul class="nav row-fluid">
-		<li class="active span4">
-			<h3 class="app-ico">1. Shipping Address</h3>
+		<li class="disabled span3">
+			<h3>1. Basket</h3>
 		</li>
-		<li class="disabled span4">
-			<h3 class="app-ico">2. Shipping Method</h3>
+		<li class="disabled span3">
+			<h3>2. Shipping Address</h3>
 		</li>
-		<!-- <li class="disabled span4">
-			<span class="number">2</span>
-			<span class="label">Payment</span>
+		<li class="active span3">
+			<h3>3. Shipping Options</h3>
+		</li>
+		<!-- <li class="disabled span3">
+			<h3>4. Payment</h3>
 		</li> -->
-		<li class="disabled span4">
-			<h3 class="app-ico">3. Place Order</h3>
+		<li class="disabled span3">
+			<h3>4. Place Order</h3>
 		</li>
 	</ul>
 </nav>
+{% endblock %}
 
+{% block content %}
 
 
 <div class="sub-header">
