--- a/oscar/templates/checkout/gateway.html
+++ b/oscar/templates/checkout/gateway.html
@@ -7,7 +7,7 @@ Checkout gateway | {{ block.super }}
 
 {% block header %}
 <div class="page-header">
-    <h1>Checkout gateway</h1>
+    <h1>About you</h1>
 </div>
 {% endblock header %}
 
@@ -17,21 +17,22 @@ Checkout gateway | {{ block.super }}
 	{% csrf_token %}
 	{{ form.non_field_errors }}
 	<div>
-		<h4>What is your email address?</h4>
-		<label for="id_username">My email address is:</label>
+		<label for="id_username">Your email address:</label>
 		{{ form.username }}
 		{{ form.username.errors }}
 	</div>
 	<div>
-		<h4>Do you have an account already?</h4>
 		{{ form.options.errors }}
-		<label><input type="radio" id="id_options_0" name="options" value="new" {% if not form.password.errors %}checked="checked"{% endif %} /> No, I want to use guest checkout</label><br/>
-		<label><input type="radio" id="id_options_1" name="options" value="existing" {% if form.password.errors %}checked="checked"{% endif %}e> Yes, I have a password</label>
+		<label><input type="radio" id="id_options_1" name="options" value="existing" {% if form.password.errors %}checked="checked"{% endif %} />
+			I have an account and my password is:</label>
 		{{ form.password }}
 		{{ form.password.errors }}
+		<a href="">Get a password reminder</a>
+		<label><input type="radio" id="id_options_0" name="options" value="new" {% if not form.password.errors %}checked="checked"{% endif %} /> I don't want to create an account</label><br/>
 	</div>
 	<div>
-		<button type="submit" class="btn">Go!</button>
+		<button type="submit" class="btn btn-large btn-primary">Continue</button>
+		Alternatively <a href="">create an account</a> before you checkout.
 	</div>
 </form>
 
