--- a/oscar/templates/promotions/home.html
+++ b/oscar/templates/promotions/home.html
@@ -1,7 +1,7 @@
 {% extends "promotions/layout.html" %}
 
-{% block sidebar %}
-{% endblock sidebar %}
+{% block column_left %}
+{% endblock %}
 
 
 {% block header %}
