--- a/oscar/templates/flatpages/help.html
+++ b/oscar/templates/flatpages/help.html
@@ -1,41 +1,35 @@
-{% extends "layout.html" %}
+{% extends "layout_2_col.html" %}
 
 {% load currency_filters %}
 
-{% block sidebar %}
-<div class="row-fluid">
-    <aside class="span3">	 	
-        <div class="well" style="padding: 8px 0;">
-            {% load flatpages %}
-            <ul class="nav nav-list">
-                <li class="nav-header">Pages</li>
-                {% get_flatpages '/help/' as flatpages %}
-                {% for page in flatpages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            </ul>
-        </div>
-    </aside><!-- /span3 -->
-{% endblock sidebar %}
+{% block column_left %} 
+   <div class="well" style="padding: 8px 0;">
+       {% load flatpages %}
+       <ul class="nav nav-list">
+           <li class="nav-header">Pages</li>
+           {% get_flatpages '/help/' as flatpages %}
+           {% for page in flatpages %}
+           <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+           {% endfor %}
+       </ul>
+   </div>
+{% endblock %}
 
 {% block flatpage %}
-    <article class="span9">
-        <div class="sub-header">
-            <h1>{{ flatpage.title }}</h1>
-        </div>
-        {{ flatpage.content }}
-        {% load flatpages %}
-        {% get_flatpages '/help/' as flatpages %}
-        <dl class="accordion">
-            {% for page in flatpages %}
-                <dt>{{ page.title }}</dt>
-                <dd>
-                    <div>
-                        {{ page.content|safe }}
-                    </div>
-                </dd>
-            {% endfor %}
-        </dl>
-    </article>
-</div><!-- /span9 -->
+    <div class="sub-header">
+        <h1>{{ flatpage.title }}</h1>
+    </div>
+    {{ flatpage.content }}
+    {% load flatpages %}
+    {% get_flatpages '/help/' as flatpages %}
+    <dl class="accordion">
+        {% for page in flatpages %}
+            <dt>{{ page.title }}</dt>
+            <dd>
+                <div>
+                    {{ page.content|safe }}
+                </div>
+            </dd>
+        {% endfor %}
+    </dl>
 {% endblock %}
