--- a/oscar/templates/layout_3_col.html
+++ b/oscar/templates/layout_3_col.html
@@ -18,17 +18,30 @@
     </header><!-- /header -->
     {% include "partials/alert_messages.html" %}
     <div class="container-fluid page">
-        {% block header %}
-        {% endblock %}
         <div class="page_inner">	
         	{% block breadcrumbs %}
             {% endblock %}
-
-            {% block flatpage %}
-            {% endblock %}
+            
+            <div class="row-fluid">
+                <aside class="span3">
+                    {% block column_left %} 
+                    {% endblock %}
+                </aside><!-- /span3 -->
+                <div class="span6">
+                    {% block header %}
+                    {% endblock %}
+                    
+                    {% block flatpage %}
+                    {% endblock %}
            
-        	{% block content %} 
-        	{% endblock %}
+        	        {% block content %} 
+        	        {% endblock %}
+        	    </div><!-- /span6 -->
+        	    <aside class="span3">
+                    {% block column_right %} 
+                    {% endblock %}
+                </aside><!-- /span3 -->
+            </div><!-- /row-fluid -->
     	</div><!-- /page_inner -->
     </div><!-- /container-fluid -->
     {% include "partials/footer.html" %}
