--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -36,11 +36,11 @@ Checkout | {{ block.super }}
 {% block content %}
 
 
-<div class="sub-header">
+<!-- <div class="sub-header">
     <h3>Order contents</h3>
-</div>
+</div> -->
 
-{% block order_contents %}
+<!-- {% block order_contents %}
 <table class="table table-striped table-bordered">
     <tr>
         <th>Product</th>
@@ -88,7 +88,7 @@ Checkout | {{ block.super }}
 <div class="form-actions">
     <a href="{% url basket:summary %}" class="btn">Edit order contents</a>
 </div>
-{% endblock order_contents %}
+{% endblock order_contents %} -->
 
 <div class="sub-header">
     <h3>Shipping address</h3>
