--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -6,12 +6,23 @@
   .actions {
     margin-left:0px;
   }
-  table {
+  .checkout-quantity {
       input {
-      width:20%;
-    }
+          width:20%;
+          float: left;
+          margin-right: 2px;
+      }
+  }
+  .basket-products {
+      border-bottom: 1px solid #E0E0E0;
+      padding: 0 0 10px;
+      margin-bottom: 18px;
   }
 }
+
+/*.basket_summary .row-fluid input {
+    width: 20%;
+}*/
 .order_summary {
   .vertical_list();
   .tier_one();
@@ -86,13 +97,14 @@
     h3 {
         text-align: center;
         font-size: 12px;
+        color: @grayLighter;
     }
 }
 
 .checkoutNav ul li:after {
     border-color: transparent transparent transparent @grayLight;
     border-style: solid;
-    border-width: 15px 0 15px 15px;
+    border-width: 14px 0 15px 15px;
     content: "";
     float: left;
     height: 0;
