--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -38,161 +38,173 @@ Basket | {{ block.super }}
 
 {% if request.basket.lines.count %}
 
-<form action="." method="post" class="basket_summary">
-    {% csrf_token %}
-    {{ formset.management_form }}
-    <table class="table table-striped table-bordered">
-        <thead>
-        <tr>
-            <th></th>
-            <th>Product</th>
-            <th>Availability</th>
-            <th>Quantity</th>
-            <th>Unit Price Excl. Tax</th>
-            <th>Tax</th>
-            <th>Line Price Excl. Tax</th>
-            <th>Line Price Incl. Tax</th>
-            <th>Save for later&hellip;</th>
-            <th>Delete?</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for form in formset %}
-        <tr>
-			<td>
-				{% product_image form.instance.product as product_image %}
-				<div style="width:100px">
-					<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
+	<div class="well">
+	    <a href="{% url checkout:index %}" class="pull-right btn btn-primary">Proceed to Checkout</a>
+	</div>
+
+	<form action="." method="post" class="basket_summary">
+	    {% csrf_token %}
+	    {{ formset.management_form }}
+
+	    <!-- <table class="table">
+	                <thead>
+	                <tr>
+	                    <th></th>
+	                    <th>Product</th>
+	                    <th>Availability</th>
+	                    <th>Quantity</th>
+	                    <th>Unit Price Excl. Tax</th>
+	                    <th>Tax</th>
+	                    <th>Line Price Excl. Tax</th>
+	                    <th>Line Price Incl. Tax</th>
+	                    <th>Save for later&hellip;</th>
+	                    <th>Delete?</th>
+	                </tr>
+	                </thead>
+	                <tbody> -->
+	            {% for form in formset %}
+	            <div class="row-fluid basket-products">
+	    			<div class="span2">
+	    				{% product_image form.instance.product as product_image %}
+	    				  <div style="width:100px">
+								<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
+							</div>
+					</div>
+	                <div class="span3">{{ form.id }}
+						<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a>
+						<p>{{ form.instance.product.stockrecord.availability }}</p>
+					</div>
+					<div class="span2">
+						<form class="well">
+							<label>Quantity</label>
+							<div class="checkout-quantity">{{ form.quantity }}</div>
+							<span class="help-inline">Delete? {{ form.DELETE }}</span>
+							<input type="submit" value="Update" class="btn"/>
+					</div>
+					<div class="span3">
+						Item Price: {{ form.instance.line_price_incl_tax|currency }}
+						<p>RRP:</p>
+						<p>You Save</p>
+						<p>RRP:$2.00 (32%)</p>
+					</div>
+					<div class="span2">
+						Save for later? {{ form.save_for_later }}
+					</div>
 				</div>
-            <td>{{ form.id }}<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a></td>
-            <td>{{ form.instance.product.stockrecord.availability }}</td>
-            <td>{{ form.quantity }}</td>
-            <td>{{ form.instance.unit_price_excl_tax|currency }}</td>
-            <td>{{ form.instance.unit_tax|currency }}</td>
-            <td>{{ form.instance.line_price_excl_tax|currency }}</td>
-            <td>{{ form.instance.line_price_incl_tax|currency }}</td>
-            <td>{{ form.save_for_later }}</td>
-            <td>{{ form.DELETE }}</td>
-        </tr>
-        {% endfor %}
-        {% for discount in basket.discounts %}
-        <tr>
-            <td colspan="7">{{ discount.name }}</td>
-            <td colspan="3">-{{ discount.discount|currency }}</td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <td colspan="6">Total</td>
-            <td>{{ request.basket.total_excl_tax|currency }}</td>
-            <td>{{ basket.total_incl_tax|currency }}</td>
-			<td></td>
-			<td></td>
-        </tr>
-        </tbody>
-    </table>
+                
+	                <!-- <td>{{ form.quantity }}</td>
+	                                <td>{{ form.instance.unit_price_excl_tax|currency }}</td>
+	                                <td>{{ form.instance.unit_tax|currency }}</td>
+	                                <td>{{ form.instance.line_price_excl_tax|currency }}</td>
+	                                <td>{{ form.instance.line_price_incl_tax|currency }}</td>
+	                                <td>{{ form.save_for_later }}</td>
+	                                <td>{{ form.DELETE }}</td>
+	                            </div> -->
+	            {% endfor %}
+	            {% for discount in basket.discounts %}
+	            <!-- <tr>
+	                            <td colspan="7">{{ discount.name }}</td>
+	                            <td colspan="3">-{{ discount.discount|currency }}</td>
+	                        </tr> -->
+	            {% endfor %}
+	            <!-- <tr>
+	                            <td colspan="6">Total</td>
+	                            <td>{{ request.basket.total_excl_tax|currency }}</td>
+	                            <td>{{ basket.total_incl_tax|currency }}</td>
+	                			<td></td>
+	                			<td></td>
+	                        </tr>
+	                        </tbody>
+	                    </table> -->
 
+
+
+	<div class="well">
+		<div class="sub-heading">
+			<h3>Basket Updates</h3>
+		</div>
+	</div>
+	
 	<div class="row-fluid">
-		<div class="span6">
-			{% with product.images.all.0 as image %}
-		    <div class="image_container">
-		        <a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ image.original.url }}" alt="{{ product.get_title }}"></a>
+		<div class="span5">	
+			<div class="sub-header">
+				<h2>Voucher/Promo Code</h2>
+			</div>
+			If you have a voucher or promo code, please enter it here.
+			
+			{% if request.basket.pk %}
+
+			<ul>
+			    {% for voucher in basket.vouchers.all %}
+			    <li>
+			        <form action="{% url basket:vouchers-remove voucher.id %}" method="POST">
+			            {% csrf_token %}
+			            {{ voucher.name }} ({{ voucher.code }})
+			            <input type="submit" value="Remove" class="btn"/>
+			        </form>
+			    </li>
+			    {% endfor %}
+			</ul>
+			{% endif %}
+
+			<form action="{% url basket:vouchers-add %}" method="post" class="form-horizontal">
+			    {% csrf_token %}
+			    {% include "partials/form_fields.html" with form=voucher_form %}
+			    <div class="form-actions">
+			        <input type="submit" value="Add voucher" class="btn"/>
+			    </div>
+			</form>
+			
+		</div>
+	    <div class="span7">
+			<div class="sub-header">
+				<h2>Basket Totals</h2>
+			</div>
+	        <table class="table table-striped table-condensed">
+	        	<tbody>
+	        		<tr>
+	        			<th>Basket Subtotal</th>
+	        			<td>{{ form.instance.line_price_excl_tax|currency }}</td>
+	        		</tr>
+	        		<tr>
+	       				<th>Delivery From</th>
+	       				<td></td>
+	       			</tr>
+	       			<tr>
+	       				<th>Total</th>
+	       				<td>{{ form.instance.line_price_incl_tax|currency }}</td>
+	       			</tr>
+	       		</tbody>
+	       	</table>
+			<div class="form-actions">
+		        Made changes? <input type="submit" value="Update basket" class="btn"/>
+		        <a href="{% url checkout:index %}" class="pull-right btn btn-primary">Proceed to Checkout</a>
 		    </div>
-		    {% endwith %}
-		</div>
-		<div class="span2">
-		    {{ form.quantity }}
-		</div>
-		<div class="span2">
-		</div>
-		<div class="span2">
-		</div>
+	    </div>
 	</div>
-	
-	<div class="sub-heading">
-		<h3>Basket Updates</h3>
-	</div>
-	
+
+	</form>
+
 	<div class="row-fluid">
-		<h4>Delivery Destination</h4>
-		<div class="span4">
-	        <div class="btn-group">
-        	    <button class="btn btn-mini dropdown-toggle" data-toggle="dropdown">
-            		USA
-            		<span class="caret"></span>
-            	</button>
-            	<ul class="dropdown-menu">
-            		<li>
-            			<a href="#">UK</a>
-            		</li>
-            		<li>
-            			<a href="#">Ireland</a>
-            		</li>
-            		<li>
-            			<a href="#">Canada</a>
-            		</li>
-            	</ul>
-        	</div>
-        </div>
-        <div class="span7">
-        	<table class="table table-striped table-condensed">
-        		<tbody>
-        			<tr>
-        				<th>Basket Subtotal</th>
-        				<td>{{ form.instance.line_price_excl_tax|currency }}</td>
-        			</tr>
-        			<tr>
-        				<th>Delivery From</th>
-        				<td></td>
-        			</tr>
-        			<tr>
-        				<th>Total</th>
-        				<td>{{ form.instance.line_price_incl_tax|currency }}</td>
-        			</tr>
-        		</tbody>
-        	</table>
-        </div>
+		<div class="sub-header">
+			<h2>Saved Items</h2>
+		</div>
+		<p>These products are ones you have saved for later</p>
+		<div class="span2"><!-- Product image -->
+		</div>
 	</div>
 
-    <div class="form-actions">
-        Made changes? <input type="submit" value="Update basket" class="btn"/>
-        <a href="{% url checkout:index %}" class="pull-right btn btn-primary">Proceed to Checkout</a>
-    </div>
-
-</form>
-{% if request.basket.pk %}
-
-<h4>Basket vouchers</h4>
-<ul>
-    {% for voucher in basket.vouchers.all %}
-    <li>
-        <form action="{% url basket:vouchers-remove voucher.id %}" method="POST">
-            {% csrf_token %}
-            {{ voucher.name }} ({{ voucher.code }})
-            <input type="submit" value="Remove" class="btn"/>
-        </form>
-    </li>
-    {% endfor %}
-</ul>
-{% endif %}
-
-<form action="{% url basket:vouchers-add %}" method="post" class="form-horizontal">
-    {% csrf_token %}
-    {% include "partials/form_fields.html" with form=voucher_form %}
-    <div class="form-actions">
-        <input type="submit" value="Add voucher" class="btn"/>
-    </div>
-</form>
-
+	
 {% else %}
 
-<p>Your basket is empty, you should probably add some items to buy.</p>
+	<p>Your basket is empty, you should probably add some items to buy.</p>
 
 {% endif %}
 
 {% if saved_formset %}
 
-<div class="page-header">
-    <h2>To buy later</h2>
+<div class="sub-header">
+    <h3>To buy later</h3>
 </div>
 
 <form action="{% url basket:saved %}" method="post" class="form-stacked later_summary">
