--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -96,8 +96,9 @@
     text-decoration: none;
     h3 {
         text-align: center;
-        font-size: 12px;
+        font-size: 11px;
         color: @grayLighter;
+        margin-left: 12px;
     }
 }
 
@@ -138,4 +139,5 @@
 .checkoutNav ul li.active h3 {
     color: #fff;
     text-align: center;
+    font-size: 12px;
 }
